# openclaw-quant-v1

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
docs/: AGENT_EXPORT.md  AI_DEVELOPMENT.md  ALPHA.md  ARCHITECTURE.md  BACKTEST.md  CLI.md  CLI_COMMANDS.md  COST.md  DATA_LAYER.md  DATA_PROVIDERS.md  DATA_SCHEMA.md  DECISIONS.md  EXECUTION.md  FACTOR_ACCELERATION.md  FACTOR_BACKTEST.md  FACTOR_CACHE.md  FACTOR_EVALUATION.md  FACTOR_LIBRARY.md  FACTOR_PIPELINE.md  FACTOR_STORE.md  FUNDAMENTAL_DATA.md  FUNDAMENTAL_FACTORS.md  MARKET_REALISM.md  MCP_SERVER.md  MULTI_FACTOR.md  OPTIMIZER.md  PACKAGING.md  PARALLELIZATION_ANALYSIS.md  PERFORMANCE.md  PORTFOLIO_CONSTRUCTION.md  PROTOCOLS.md  REBALANCE.md  REGIME_DETECTION.md  REPORT_ARCHITECTURE.md  RESEARCH_VALIDATION.md  RISK.md  ROADMAP.md  SCHEDULER.md  STRATEGY_DSL.md  STRATEGY_EVALUATION.md  (+4 more)
examples/: alpha_config.json  alpha_targets.json  cost_config.json  cost_config_realistic.json  factor_pipeline_config.json  fundamentals_sample.csv  market_realism_config.json  optimizer_config.json  research_scheduler_alpha_config.json  research_scheduler_config.json  strategy_gate_config.json  targets.json
quant/: __init__.py  cli.py  config.py
scripts/: batch_backtest.py  benchmark_hpc.py  benchmark_in_memory_hpc.py  diag_universe.py  run_factor_comparison.py  validate_factor_correctness.py  wf_scoreboard.py
strategies/: momentum_fundamental.yaml  quality_growth.yaml  regime_aware_momentum.yaml
tests/: test_agent_export.py  test_alpha_engine.py  test_cli_refactor.py  (+49 more)
(+410 files in other folders)
