[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-quant"
version = "0.28.0"
description = "Offline quantitative research framework for data, factors, portfolio simulation, validation, and report export."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "OpenClaw Quant contributors" }
]
keywords = ["quant", "research", "backtest", "portfolio", "factors", "offline"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "pandas>=2.2",
]

[project.optional-dependencies]
core = [
  "pandas>=2.2",
  "yfinance>=0.2.40",
]
visualization = []
dev = [
  "pytest>=8.0",
]

[project.scripts]
openclaw-quant = "quant.cli:main"

[tool.setuptools.packages.find]
include = ["quant*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
